<resources>
    <string name="app_name">Figuras</string>
    <string name="cuadro">Cuadro</string>
    <string name="circulo">Circulo</string>
    <string name="triangulo">Triangulo</string>
    <string name="cubo">Cubo</string>
    <string name="figuras">FIGURAS</string>
    <string name="lado">Lado</string>
    <string name="calcular">Calcular</string>
    <string name="radio">Radio</string>
    <string name="lado1">Lado 1</string>
    <string name="lado2">Lado 2</string>
    <string name="lado3">Lado 3</string>
    <string name="arista">Arista</string>
    <string name="calculos">Calculos:</string>
</resources>
