<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.juan.figuras.MainActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/figuras"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RadioButton
                        android:id="@+id/rCuadro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/cuadro" />

                <RadioButton
                        android:id="@+id/rCirculo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/circulo" />

                <RadioButton
                        android:id="@+id/rTriangulo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/triangulo" />

                <RadioButton
                        android:id="@+id/rCubo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/cubo" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <EditText
                        android:id="@+id/eLado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/lado"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:inputType="numberDecimal"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <EditText
                        android:id="@+id/eRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/radio"
                        android:inputType="numberDecimal"
                        android:gravity="center"
                        android:textSize="15sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/eLado1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/lado1"
                        android:inputType="numberDecimal"
                        android:gravity="center"
                        android:textSize="15sp"/>
                    <EditText
                        android:id="@+id/eLado2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/lado2"
                        android:inputType="numberDecimal"
                        android:gravity="center"
                        android:textSize="15sp"/>
                    <EditText
                        android:id="@+id/eLado3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/lado3"
                        android:inputType="numberDecimal"
                        android:gravity="center"
                        android:textSize="15sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <EditText
                        android:id="@+id/eArista"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/arista"
                        android:inputType="numberDecimal"
                        android:gravity="center"
                        android:textSize="15sp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/bCalcular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calcular"
                android:textColor="@color/black"
                android:textAllCaps="false"
                />

        </LinearLayout>

    <TextView
        android:id="@+id/tCalculos"
        android:text="@string/calculos"
        android:textSize="25sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>

</ScrollView>
